docs/0.12/_sources/api/gammapy.maps.WcsNDMap.rst.txt
WcsNDMap
========

.. currentmodule:: gammapy.maps

.. autoclass:: WcsNDMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~WcsNDMap.data
      ~WcsNDMap.geom
      ~WcsNDMap.meta
      ~WcsNDMap.quantity
      ~WcsNDMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~WcsNDMap.coadd
      ~WcsNDMap.convolve
      ~WcsNDMap.copy
      ~WcsNDMap.create
      ~WcsNDMap.crop
      ~WcsNDMap.cutout
      ~WcsNDMap.downsample
      ~WcsNDMap.fill_by_coord
      ~WcsNDMap.fill_by_idx
      ~WcsNDMap.fill_by_pix
      ~WcsNDMap.from_geom
      ~WcsNDMap.from_hdu
      ~WcsNDMap.from_hdulist
      ~WcsNDMap.get_by_coord
      ~WcsNDMap.get_by_idx
      ~WcsNDMap.get_by_pix
      ~WcsNDMap.get_image_by_coord
      ~WcsNDMap.get_image_by_idx
      ~WcsNDMap.get_image_by_pix
      ~WcsNDMap.interp_by_coord
      ~WcsNDMap.interp_by_pix
      ~WcsNDMap.iter_by_coord
      ~WcsNDMap.iter_by_image
      ~WcsNDMap.iter_by_pix
      ~WcsNDMap.make_hdu
      ~WcsNDMap.pad
      ~WcsNDMap.plot
      ~WcsNDMap.plot_interactive
      ~WcsNDMap.read
      ~WcsNDMap.reproject
      ~WcsNDMap.set_by_coord
      ~WcsNDMap.set_by_idx
      ~WcsNDMap.set_by_pix
      ~WcsNDMap.slice_by_idx
      ~WcsNDMap.smooth
      ~WcsNDMap.sum_over_axes
      ~WcsNDMap.to_hdulist
      ~WcsNDMap.upsample
      ~WcsNDMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: coadd
   .. automethod:: convolve
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: from_geom
   .. automethod:: from_hdu
   .. automethod:: from_hdulist
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: iter_by_coord
   .. automethod:: iter_by_image
   .. automethod:: iter_by_pix
   .. automethod:: make_hdu
   .. automethod:: pad
   .. automethod:: plot
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reproject
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: smooth
   .. automethod:: sum_over_axes
   .. automethod:: to_hdulist
   .. automethod:: upsample
   .. automethod:: write
